--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@quasar/extras": "^1.16.7",
+    "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
+    "jwt-decode": "^3.1.2",
+    "quasar": "^2.13.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.5.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.32.12",
     "vite": "^4.4.5"
   }
 }
